@@ -17,6 +17,8 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix permissions issue on linux whith noatime enabled for non-owned files
+	* use random peer IDs in anonymous mode
 	* fix move_storage bugs
 	* fix unnecessary dependency on boost.date_time when building boost.asio as separate compilation
 	* always use SO_REUSEADDR and deprecate the flag to turn it on
